JumpScript/tests/baselines/reference/classAndVariableWithSameName.errors.txt
tests/cases/conformance/classes/classDeclarations/classAndVariableWithSameName.jump(1,7): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/classes/classDeclarations/classAndVariableWithSameName.jump(2,5): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/classes/classDeclarations/classAndVariableWithSameName.jump(5,11): error TS2300: Duplicate identifier 'D'.
tests/cases/conformance/classes/classDeclarations/classAndVariableWithSameName.jump(9,9): error TS2300: Duplicate identifier 'D'.


==== tests/cases/conformance/classes/classDeclarations/classAndVariableWithSameName.jump (4 errors) ====
    class C { foo: string; } // error
          ~
!!! error TS2300: Duplicate identifier 'C'.
    var C = ''; // error
        ~
!!! error TS2300: Duplicate identifier 'C'.
    
    module M {
        class D { // error
              ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    
        var D = 1; // error
            ~
!!! error TS2300: Duplicate identifier 'D'.
    }